@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.13 2002/09/04 01:15:52 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.14 2002/09/04 01:23:26 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1288,3 +1288,7 @@ sys/nfs/nfs_socket.c				1.75
   Initialize recm to NULL inside the loop, so that a record length of
   NULL will not accidentallly append bogus data (the previous record).
   Derived from a fix by Matt Dillon in FreeBSD.
+
+lib/libc/net/inet_ntop.c			1.11-1.12
+  be more picky about string buffer manipulation.  hints from freebsd.
+  correct snprintf return value handling.
